--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@fleekhq/fleek-storage-js": "^1.0.20",
     "@google-cloud/storage": "^5.16.0",
     "@trustlessfi/addresses": "^0.4.14",
     "@trustlessfi/artifacts": "^0.1.23",
