--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "dependencies": {
     "@fleekhq/fleek-storage-js": "^1.0.20",
     "@google-cloud/storage": "^5.16.0",
-    "@trustlessfi/addresses": "^0.4.14",
-    "@trustlessfi/artifacts": "^0.1.23",
-    "@trustlessfi/typechain": "^0.6.28",
+    "@trustlessfi/addresses": "^0.5.3",
     "@types/node": "^16.11.10",
+    "@types/node-fetch": "^3.0.3",
     "@types/sqlite3": "^3.1.7",
+    "axios": "^0.24.0",
     "commander": "^8.3.0",
     "ethers": "^5.5.1",
     "prettier": "^2.5.0",
@@ -19,7 +19,7 @@
     "typescript": "^4.5.2"
   },
   "scripts": {
-    "cli": "tsc && node dist/cli.js"
+    "cli": "ts-node src/cli.ts"
   },
   "packageManager": "yarn@3.1.1"
 }
